src/objects/Health_Screen__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>Health_Screen_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Blood_Pressure__c</fullName>
        <description>Client&apos;s Blood Pressure</description>
        <label>Blood Pressure</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_in_pain__c</fullName>
        <label>Client in pain?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_prescribed_pain_medications__c</fullName>
        <label>Client prescribed pain medications?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Medical_Problems__c</fullName>
        <inlineHelpText>Please select all that apply.</inlineHelpText>
        <label>Current Medical Problems</label>
        <picklist>
            <picklistValues>
                <fullName>Allergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arthritis/Joint disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coronary heart disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia/Organic brain disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female reproductive system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genital/Urinary disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis/ Cirrhosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV/AIDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High cholesterol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypertension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurological</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obesity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osteoporosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sexually transmitted disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sleep disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ulcer/Gastrointestinal disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cirrhosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_client_is_in_pain_rate_intensity__c</fullName>
        <label>If client is in pain, rate intensity</label>
        <picklist>
            <picklistValues>
                <fullName>Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worst</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>List_any_prescribed_painkillers__c</fullName>
        <inlineHelpText>Please enter any pain medication the client is currently prescribed.</inlineHelpText>
        <label>List any prescribed pain medication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_LPN__c</fullName>
        <label>Notes (LPN)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Psych__c</fullName>
        <label>Notes (Psych.)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_doctor_visits_in_the_last_year__c</fullName>
        <label>Number of doctor visits in the last year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_general_health_ER_visits__c</fullName>
        <inlineHelpText>Please enter the number of times the client has visited the emergency room for general health concerns in the last 12 months.</inlineHelpText>
        <label>Number of general health ER visits</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pulse__c</fullName>
        <label>Pulse</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Respiratory_rate__c</fullName>
        <inlineHelpText>Please enter the client&apos;s recorded respiratory rate per minute</inlineHelpText>
        <label>Respiratory rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Smoking_information__c</fullName>
        <inlineHelpText>If client currently smokes, please enter the date of their most recent attempt to quit, and the number of years they have smoked.</inlineHelpText>
        <label>Smoking information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Smoking_status__c</fullName>
        <label>Smoking status</label>
        <picklist>
            <picklistValues>
                <fullName>Current smoker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former smoker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never smoked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <inlineHelpText>Please enter the client’s recorded temperature in degrees Fahrenheit.</inlineHelpText>
        <label>Temperature</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_first_cigarette__c</fullName>
        <label>Time to first cigarette</label>
        <picklist>
            <picklistValues>
                <fullName>Within 5 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-30 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-60 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61 minutes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Want_help_getting__c</fullName>
        <inlineHelpText>Please select all that apply</inlineHelpText>
        <label>Want help getting any of the following:</label>
        <picklist>
            <picklistValues>
                <fullName>Dental care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A PCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STD screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Psychiatrist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_did_you_receive_in_jail__c</fullName>
        <label>What did you receive in jail?</label>
        <picklist>
            <picklistValues>
                <fullName>PPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full physical</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>of_cigarettes_per_day__c</fullName>
        <label># of cigarettes per day</label>
        <picklist>
            <picklistValues>
                <fullName>1-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_general_health_hospital_admissions__c</fullName>
        <inlineHelpText>Please enter the number of times the client was admitted to the hospital for general health concerns in the last 12 months.</inlineHelpText>
        <label># of general health hospital admissions</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>aHealth Screen</label>
    <nameField>
        <displayFormat>HSA-{0000}</displayFormat>
        <label>Health Screen Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aHealth Screen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>